--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: Grupo 4 Carteira de Trabalho Digital
+site_url: https://requisitos-de-software.github.io/2025.1-Carteira-de-Trabalho-Digital/
+
 theme:
   name: material
   
